# i3guesstemator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  i3guesstemator.cpp
config/: simpleConfig.yml
include/: battery.h  batteryGenerator.h  brightnessGenerator.h  configuration.h  cpuGenerator.h  diskGenerator.h  element.h  elementGenerator.h  helpers.h  i3barWriter.h  i3guesstemator.h  ramGenerator.h  timeGenerator.h  updatingAverage.h  updatingFileBuffer.h  writer.h
